--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=10091
+#server.port=10091
 spring.application.name=springboot-thymeleaf-pagination-v2
 # h2 database settings
 spring.datasource.username=sa
